--- a/project.config.json
+++ b/project.config.json
@@ -11,7 +11,7 @@
 	},
 	"compileType": "game",
 	"libVersion": "1.9.9",
-	"appid": "wxe0838738b5a84b38",
+	"appid": "wxd8262b844fdbde92",
 	"projectname": "mg_drawing",
 	"condition": {
 		"search": {
